examples/test/testpolicy11836.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11836
  namespace: namespace60
spec:
  podSelector:
    matchLabels:
      key24: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value27
          key49: value7
          key0: value36
      podSelector:
        matchLabels:
          key38: value6
          key47: value28
